security em todos os endpoints